# fastapi_test

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  alembic.ini  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: pylint.yml
migrations/: env.py
src/: api.py  app.py  routers.py  server.py
src/admin/: user_views.py
src/config/: __init__.py  db_config.py  hashing.py  security.py  settings.py
src/dal/: __init__.py  user_db_service.py
src/migrations/: env.py
src/migrations/versions/: 06643116d690_.py  2d270bde1534_.py  3404f27bc06f_.py  91fc96a124a6_.py  b582ae1c59b5_.py
src/model/: user_model.py
src/router/: __init__.py  auth_router.py  user_router.py
src/schema/: __init__.py  auth_schema.py  base.py  user_schema.py
src/service/: __init__.py  auth_service.py  send_email.py  user_service.py
